<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/note_item_layout_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            app:cardCornerRadius="13dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/note_item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/google_sans_bold"
                    android:padding="5dp"
                    android:text="@string/this_is_a_title"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/note_item_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/note_item_title"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="4dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/google_sans_regular"
                    android:maxLines="12"
                    android:padding="5dp"
                    android:textSize="14sp"
                    tools:text="@string/some_text" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/note_item_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/note_item_description"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:drawableStart="@drawable/ic_outline_calendar_today_24"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/google_sans_regular"
                    android:padding="5dp"
                    android:text="@string/_10_09_2021"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:drawableTint="@color/black" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>
</layout>